--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
   <title>Offerbook</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-  <app-root></app-root>
+<body class="mat-typography">
+    <app-root></app-root>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
 </body>
 </html>
